--- a/02ConversorDeMoedas/index.html
+++ b/02ConversorDeMoedas/index.html
@@ -6,6 +6,7 @@
         <title>Conversor de Moeda</title>
         <link rel="stylesheet" href="style.css">
         <link rel="function" href="function.js">
+        <script src="function.js"></script>
     </head> 
     <body>
         <div class="container">
@@ -18,12 +19,11 @@
         <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" class="page-logo" alt=""><br><br>
         <label for="moeda">
         <p class="pagequestion">
-            Insira o valor em Dolar:</label><br>
+            Insira o valor em Dólar:</label><br>
         </p>
         <input type="number" id="valor" size="2" /><br>
         <button type="submit" onclick="Converter()">Converter</button>
         <h2 id="valorConvertido"></h2>
-     
     </div>
     <a href="https://alura.com.br/" target="_blank">
     </body>
