--- a/01_Calculadora/index.html
+++ b/01_Calculadora/index.html
@@ -1,7 +1,8 @@
-
 <html>
     <head>
-      <title> Imersão Dev Alura - Aula 01</title>
+      <title> Calculadora de média - Aula 01</title>
+      <link rel="stylesheet" href="style.css">
+      <script src="function.js"></script>
     </head>
     <body>
       <div class="container">
@@ -10,10 +11,8 @@
         <p class="page-subtitle">
         Descubra qual a sua média de nota de todas as provas!
         </p>
-        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" class="page-logo" alt="">
       </div>
-      <a href="https://alura.com.br/" target="_blank">
-      <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
+        <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
         
         <div class="container2">
         <label>Insira a nota do primeiro bimestre:</label>
