--- a/01_Calculadora/index.html
+++ b/01_Calculadora/index.html
@@ -3,6 +3,7 @@
       <title> Calculadora de média - Aula 01</title>
       <link rel="stylesheet" href="style.css">
       <script src="function.js"></script>
+      <meta charset="UTF-8">
     </head>
     <body>
       <div class="container">
