--- a/04ArrayListaFlix/index.html
+++ b/04ArrayListaFlix/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Array Lista e Flix</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="function" href="function.js">
     </head> 
         <title>
             Imersão Dev - Aula 04
@@ -28,4 +27,6 @@
   
   <!-- Aqui fica o botão sortear filme -->
   <button type="submit" onclick="Sortear()" id="botaoSortear">Sortear Filme</button>
-  <h2 class="filmeSorteado" id="filmeSorteado"></h2>
+  <div class="filmeSorteado" id="filmeSorteado"></div>
+  
+  <script src="function.js"></script>
