--- a/02ConversorDeMoedas/index.html
+++ b/02ConversorDeMoedas/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UFT-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
         <title>Conversor de Moeda</title>
         <link rel="stylesheet" href="style.css">
         <link rel="function" href="function.js">
