--- a/04ArrayListaFlix/index.html
+++ b/04ArrayListaFlix/index.html
@@ -10,23 +10,23 @@
             Imersão Dev - Aula 04
         </title>
 
-<div class="container">
-    <h1 class="page-title">
-      Flix04
-    </h1>
-    <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo" alt="">
-  </div>
-  <a href="https://alura.com.br/" target="_blank">
-    <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
-  </a>
-  
-  <!-- Aqui fica a caixa e o botão de inserir url -->
-  <input type="text" id="urlInserida" placeholder="Insira a URL da imagem" /><br>
-  <button type="submit" onclick="Inserir()" id="botaoInserir">Procurar</button>
-  <h2 class="filmeAdicionado" id="filmeAdicionado"></h2>
-  
-  <!-- Aqui fica o botão sortear filme -->
-  <button type="submit" onclick="Sortear()" id="botaoSortear">Sortear Filme</button>
-  <div class="filmeSorteado" id="filmeSorteado"></div>
-  
-  <script src="function.js"></script>
+        <div class="container">
+            <h1 class="page-title">
+              Flix04
+            </h1>
+            <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo" alt="">
+        </div>
+              <a href="https://alura.com.br/" target="_blank">
+                <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
+              </a>
+          
+          <!-- Aqui fica a caixa e o botão de inserir url -->
+          <input type="text" id="urlInserida" placeholder="Insira a URL da imagem" /><br>
+          <button type="submit" onclick="Inserir()" id="botaoInserir">Procurar</button>
+          <h2 class="filmeAdicionado" id="filmeAdicionado"></h2>
+          
+          <!-- Aqui fica o botão sortear filme -->
+          <button type="submit" onclick="Sortear()" id="botaoSortear">Sortear Filme</button>
+          <div class="filmeSorteado" id="filmeSorteado"></div>
+</html>   
+<script src="function.js"></script>
