--- a/06Tabeladeclassificação/index.html
+++ b/06Tabeladeclassificação/index.html
@@ -1,70 +1,47 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 
 <head>
-  <title>
-    Imersão Dev - Aula 06
-  </title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Tabela de Classificação</title>
 </head>
 
 <body>
-  <h1>Tabela de classificação</h1>
 
-  <table style="width:100%">
-    <thead>
-      <tr>
-        <th>Nome</th>
-        <th>Foto</th>
-        <th>Vitórias</th>
-        <th>Empates</th>
-        <th>Derrotas</th>
-        <th>Pontos</th>
-        <th colspan="3">Ações</th>
-      </tr>
-    </thead>
-    <tbody id="tabelaJogadores">
+    <a href="https://alura.com.br/" target="_blank">
+        <img class="alura-logo" src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="Logo Alura">
+    </a>
 
-      <!--      <tr>
-        <td>Paulo</td>
-        <td>2</td>
-        <td>5</td>
-        <td>1</td>
-        <td>24</td>
-        <td><button onClick="adicionarVitoria()">Vitória</button></td>
-        <td><button onClick="adicionarEmpate()">Empate</button></td>
-        <td><button onClick="adicionarDerrota()">Derrota</button></td>
-      </tr>
-      <tr>
-        <td>Rafa</td>
-        <td>3</td>
-        <td>5</td>
-        <td>6</td>
-        <td>2</td>
-        <td><button onClick="adicionarVitoria()">Vitória</button></td>
-        <td><button onClick="adicionarEmpate()">Empate</button></td>
-        <td><button onClick="adicionarDerrota()">Derrota</button></td>
-      </tr>
-      <tr>
-        <td>Gui</td>
-        <td>3</td>
-        <td>5</td>
-        <td>6</td>
-        <td>2</td>
-        <td><button onClick="adicionarVitoria()">Vitória</button></td>
-        <td><button onClick="adicionarEmpate()">Empate</button></td>
-        <td><button onClick="adicionarDerrota()">Derrota</button></td>
-      </tr>
-    </tbody>
--->
-  </table>
-  <div>
-    <button type="submit" id="resetarJogo" onClick="resetarJogo()">Zerar Placar</button>
-  </div>
-  <div>
-    <input type="text" id="nomeJogador" name="jogador" placeholder="Insira o nome do jogador">
-    <input type="text" id="fotoJogador" name="fotoJogador" placeholder="Insira a url da foto">
-    <button onClick="adicionarJogador()">Adicionar Jogador</button>
-  </div>
+    <h1 class="page-title">Tabela de classificação</h1>
+
+    <label for="input-player">NOVO JOGADOR: </label>
+    <input type="text" id="input-player" placeholder="Nome do jogador">
+    <button class="btn-add" type="submit" onclick="addPlayer()">ADICIONAR</button>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Vitórias</th>
+                <th>Empates</th>
+                <th>Derrotas</th>
+                <th>Pontos</th>
+                <th colspan="3">Ações</th>
+                <th>Excluir</th>
+            </tr>
+        </thead>
+        <tbody id="players-table"></tbody>
+    </table>
+
+    <button class="btn-delete" type="submit" onclick="resetScore()">APAGAR PONTUAÇÃO</button> <br>
+
+    <img class="page-logo" src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" alt="Logo Imersão Dev">
+
+    <script src="function.js"></script>
+
 </body>
 
 </html>
-<script src="function.js"></script>
